vpc.tf
resource "aws_vpc" "mainVpc" {
  cidr_block = "10.0.0.0/16"
  enable_dns_hostnames = "true"
}
